syntax = "proto3";

package xai_api;

option go_package = "github.com/ZaguanLabs/xai-sdk-go/proto/gen/go/xai/v1;xaiv1";

import "google/protobuf/timestamp.proto";
import "xai/v1/image.proto";
import "xai/v1/usage.proto";

// EmbedEncodingFormat specifies the encoding format for embeddings
enum EmbedEncodingFormat {
  FORMAT_INVALID = 0;
  FORMAT_FLOAT = 1;
  FORMAT_BASE64 = 2;
}

// EmbedInput represents input for embedding (text or image)
message EmbedInput {
  string string = 1;
  ImageUrlContent image_url = 2;
}

// EmbedRequest is the request for generating embeddings
message EmbedRequest {
  repeated EmbedInput input = 1;
  string model = 2;
  EmbedEncodingFormat encoding_format = 3;
  string user = 4;
}

// EmbedResponse is the response containing embeddings
message EmbedResponse {
  string id = 1;
  repeated Embedding embeddings = 2;
  EmbeddingUsage usage = 3;
  string model = 4;
  string system_fingerprint = 5;
}

// Embedding represents a single embedding result
message Embedding {
  int32 index = 1;
  repeated FeatureVector embeddings = 2;
}

// FeatureVector contains the embedding vector in float or base64 format
message FeatureVector {
  repeated float float_array = 1;
  string base64_array = 2;
}
